--- a/html2img.ipynb
+++ b/html2img.ipynb
@@ -1,21 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. generar archivo HTML\n",
-    "2. renderizar archivo a png\n",
-    "3. recortar archivo y guardarlo"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import imgkit\n",
     "from jinja2 import Environment, FileSystemLoader, select_autoescape\n",
     "import json\n",
     "from skimage import io\n",
@@ -24,22 +14,41 @@
     "from fpdf import FPDF\n",
     "import math\n",
     "import glob\n",
-    "import os"
+    "import os\n",
+    "import asyncio\n",
+    "from pathlib import Path\n",
+    "from pyppeteer import launch\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "''"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "env = Environment(\n",
-    "    loader=FileSystemLoader(\"./\"),\n",
-    "    autoescape=select_autoescape()\n",
-    ")\n",
-    "template = env.get_template(\"./templates/front.html\")\n",
+    "path = '/home/edoelas/git/card-generator'\n",
+    "template = \"templates/front.html\"\n",
+    "deck = \"decks/basic.json\"\n",
     "\n",
-    "data = json.load(open('info.json',))\n",
+    "\n",
+    "async def capture_screenshot(url, png_path):\n",
+    "    browser = await launch()\n",
+    "    page = await browser.newPage()\n",
+    "    await page.setViewport({'width': 1000, 'height': 2000})\n",
+    "    await page.goto(url)\n",
+    "    await page.screenshot({'path': Path(png_path)})\n",
+    "    await browser.close()\n",
     "\n",
     "def crop_card(img):\n",
     "    white = np.array([255, 255, 255, 255])\n",
@@ -56,78 +65,38 @@
     "    new_shape = tuple(map(sum, zip(out.shape,(margin*2,margin*2,0))))\n",
     "    new_image = np.full(new_shape,255,dtype=np.uint8)\n",
     "    new_image[margin:-margin,margin:-margin] = out\n",
-    "    return new_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading page (1/2)\n",
-      "Warning: file:///home/edoelas/gdrive/proyectos/Juego%20mesa/assets/templates/ability%20card/template/assets/script.js:11 692\n",
-      "Rendering (2/2)                                                    \n",
-      "Done                                                               \n",
-      "Loading page (1/2)\n",
-      "Warning: file:///home/edoelas/gdrive/proyectos/Juego%20mesa/assets/templates/ability%20card/template/assets/script.js:11 692\n",
-      "Rendering (2/2)                                                    \n",
-      "Done                                                               \n",
-      "Loading page (1/2)\n",
-      "Warning: file:///home/edoelas/gdrive/proyectos/Juego%20mesa/assets/templates/ability%20card/template/assets/script.js:11 692\n",
-      "Rendering (2/2)                                                    \n",
-      "Done                                                               \n"
-     ]
-    }
-   ],
-   "source": [
-    "options = {\n",
-    "    #\"javascript-delay\": 10000,\n",
-    "    \"enable-local-file-access\": None,\n",
-    "    \"debug-javascript\": None,\n",
-    "}\n",
+    "    return new_image\n",
     "\n",
-    "# Delete old images\n",
-    "files = glob.glob('./png_out/*')\n",
-    "for f in files:\n",
-    "    os.remove(f)\n",
+    "template = env.get_template(template)\n",
+    "data = json.load(open(deck))\n",
     "\n",
+    "env = Environment(\n",
+    "    loader=FileSystemLoader(\"./\"),\n",
+    "    autoescape=select_autoescape()\n",
+    ")\n",
+    "\n",
+    "# Delete old files\n",
+    "for f in  glob.glob('./png_out/*'): os.remove(f)\n",
+    "for f in  glob.glob('./html_out/*'): os.remove(f)\n",
+    "    \n",
     "# Generate new images\n",
-    "for card in data['cards']:\n",
+    "for card in data:\n",
     "    html_path = './html_out/'+card['name']+'.html'\n",
-    "    png_path = './png_out/'+card['name']+'_1.png'\n",
+    "    png_path = './png_out/'+card['name']+'.png'\n",
+    "    url = 'file://{}/html_out/{}.html'.format(path, card['name'])\n",
     "\n",
     "    template.stream(card).dump(html_path) # Create HTML\n",
     "\n",
-    "    imgkit.from_file(html_path, png_path, options=options) # Convert HTML to PNG\n",
+    "    asyncio.get_event_loop().run_until_complete(capture_screenshot(url, png_path))\n",
     "    image = io.imread(png_path)\n",
     "    image = crop_card(image) # Crop image\n",
     "\n",
     "    for i in range(card['amount']): # Multiply number of images\n",
-    "        png_path = './png_out/{}_{}.png'.format(card['name'],i+1)\n",
-    "        io.imsave(png_path,image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "''"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Generate PDF\n",
+    "        png_path_copies = './png_out/{}_{}.png'.format(card['name'],i+1)\n",
+    "        io.imsave(png_path_copies,image)\n",
+    "    os.remove(png_path)\n",
     "\n",
+    "# Generate PDF\n",
     "cards_path_list = listdir('./png_out')\n",
     "cards_path_list.sort()\n",
     "num_pages = math.ceil(len(cards_path_list)/9)\n",
@@ -156,8 +125,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
-   "name": "python395jvsc74a57bd04e1d9a8909477db77738c33245c29c7265277ef753467dede8cf3f814cde494e"
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python396jvsc74a57bd04e1d9a8909477db77738c33245c29c7265277ef753467dede8cf3f814cde494e"
   },
   "language_info": {
    "codemirror_mode": {
@@ -169,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   },
   "orig_nbformat": 2
  },
